Add asset_store to manage textures
Add a stone texture to test it out.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(CMAKE_CXX_STANDARD 14)
 #
 
 set(SOURCES
+	src/asset_store.cpp
 	src/my_app.cpp
 	src/screenshot.cpp
 	src/sdl_app.cpp
@@ -19,6 +20,7 @@ set(SOURCES
 	)
 
 set(HEADERS
+	src/asset_store.hpp
 	src/color.hpp
 	src/my_app.hpp
 	src/screenshot.hpp
