Split source into mymath and raycaster
mymath is a library for linear algebra and other geometric concepts.

raycaster uses that library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,28 +8,44 @@ set(CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_STANDARD 14)
 
 #
+# mymath
+#
+
+set(MYMATH_HEADERS
+	${CMAKE_CURRENT_SOURCE_DIR}/src/mymath/cartesian.hpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/mymath/linear_algebra.hpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/mymath/mymath.hpp
+	)
+
+add_library(mymath INTERFACE)
+
+target_sources(mymath INTERFACE ${MYMATH_HEADERS})
+target_include_directories(mymath INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
+#
 # raycaster
 #
 
 set(SOURCES
-	src/asset_store.cpp
-	src/camera.cpp
-	src/input_buffer.cpp
-	src/my_app.cpp
-	src/screenshot.cpp
-	src/sdl_app.cpp
-	src/main.cpp
+	src/raycaster/asset_store.cpp
+	src/raycaster/camera.cpp
+	src/raycaster/input_buffer.cpp
+	src/raycaster/my_app.cpp
+	src/raycaster/screenshot.cpp
+	src/raycaster/sdl_app.cpp
+	src/raycaster/sdl_mymath.cpp
+	src/raycaster/main.cpp
 	)
 
 set(HEADERS
-	src/asset_store.hpp
-	src/camera.hpp
-	src/color.hpp
-	src/input_buffer.hpp
-	src/my_app.hpp
-	src/mymath.hpp
-	src/screenshot.hpp
-	src/sdl_app.hpp
+	src/raycaster/asset_store.hpp
+	src/raycaster/camera.hpp
+	src/raycaster/color.hpp
+	src/raycaster/input_buffer.hpp
+	src/raycaster/my_app.hpp
+	src/raycaster/screenshot.hpp
+	src/raycaster/sdl_app.hpp
+	src/raycaster/sdl_mymath.cpp
 	)
 
 add_executable(raycaster ${SOURCES} ${HEADERS})
@@ -40,4 +56,5 @@ target_include_directories(raycaster
 	)
 target_link_libraries(raycaster
 	${SDL2_LIBRARIES}
+	mymath
 	)
