Spin off mycolor and sdl_raii

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,18 @@ set(CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_STANDARD 14)
 
 #
+# mycolor
+#
+
+set(MYCOLOR_HEADERS
+	${CMAKE_CURRENT_SOURCE_DIR}/src/mycolor/mycolor.hpp
+	)
+
+add_library(mycolor INTERFACE)
+target_sources(mycolor INTERFACE ${MYCOLOR_HEADERS})
+target_include_directories(mycolor INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
+#
 # mymath
 #
 
@@ -18,9 +30,28 @@ set(MYMATH_HEADERS
 	)
 
 add_library(mymath INTERFACE)
-
 target_sources(mymath INTERFACE ${MYMATH_HEADERS})
 target_include_directories(mymath INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
+#
+# sdl_raii
+#
+
+set(SDL_RAII_SOURCES
+	src/sdl_raii/sdl_app.cpp
+	)
+
+set(SDL_RAII_HEADERS
+	src/sdl_raii/sdl_app.hpp
+	)
+
+add_library(sdl_raii STATIC ${SDL_RAII_SOURCES} ${SDL_RAII_HEADERS})
+target_include_directories(sdl_raii
+	INTERFACE
+		${CMAKE_CURRENT_SOURCE_DIR}/src
+	PUBLIC
+		${SDL2_INCLUDE_DIRS}
+	)
 
 #
 # raycaster
@@ -32,7 +63,6 @@ set(SOURCES
 	src/raycaster/input_buffer.cpp
 	src/raycaster/my_app.cpp
 	src/raycaster/screenshot.cpp
-	src/raycaster/sdl_app.cpp
 	src/raycaster/sdl_mymath.cpp
 	src/raycaster/main.cpp
 	)
@@ -40,12 +70,10 @@ set(SOURCES
 set(HEADERS
 	src/raycaster/asset_store.hpp
 	src/raycaster/camera.hpp
-	src/raycaster/color.hpp
 	src/raycaster/input_buffer.hpp
 	src/raycaster/my_app.hpp
 	src/raycaster/screenshot.hpp
-	src/raycaster/sdl_app.hpp
-	src/raycaster/sdl_mymath.cpp
+	src/raycaster/sdl_mymath.hpp
 	)
 
 add_executable(raycaster ${SOURCES} ${HEADERS})
@@ -57,4 +85,5 @@ target_include_directories(raycaster
 target_link_libraries(raycaster
 	${SDL2_LIBRARIES}
 	mymath
+	sdl_raii
 	)
