--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ set(CMAKE_CXX_STANDARD 14)
 # Some SDL2 configs (*cough* Ubuntu 16.04 *cough*) require this set
 cmake_policy(SET CMP0004 OLD)
 
+add_definitions("-Wall")
+
 #
 # mycolor
 #
