Split anon functions into own files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ target_link_libraries(sdl_application
 
 set(SOURCES
 	src/raycaster/camera.cpp
+	src/raycaster/collision.cpp
 	src/raycaster/intersection.cpp
 	src/raycaster/raycaster_app.cpp
 	src/raycaster/main.cpp
@@ -109,7 +110,10 @@ set(SOURCES
 
 set(HEADERS
 	src/raycaster/camera.hpp
+	src/raycaster/collision.hpp
 	src/raycaster/intersection.hpp
+	src/raycaster/level.hpp
+	src/raycaster/pixel_format_debug.hpp
 	src/raycaster/raycaster_app.hpp
 	)
 
