--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,22 +102,21 @@ target_link_libraries(sdl_application
 
 set(SOURCES
 	src/raycaster/camera.cpp
-	src/raycaster/collision.cpp
 	src/raycaster/intersection.cpp
 	src/raycaster/level.cpp
-    src/raycaster/pipeline.cpp
+	src/raycaster/pipeline.cpp
 	src/raycaster/raycaster_app.cpp
 	src/raycaster/main.cpp
 	)
 
 set(HEADERS
 	src/raycaster/camera.hpp
-	src/raycaster/collision.hpp
 	src/raycaster/intersection.hpp
 	src/raycaster/level.hpp
     src/raycaster/pipeline.hpp
 	src/raycaster/pixel_format_debug.hpp
 	src/raycaster/raycaster_app.hpp
+	src/raycaster/texture_cache.hpp
 	)
 
 add_executable(raycaster ${SOURCES} ${HEADERS})
