Get lua compiling with CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,12 @@ cmake_policy(SET CMP0004 OLD)
 add_definitions("-Wall")
 
 #
+# third-party requirements
+#
+
+add_subdirectory(ext)
+
+#
 # mycolor
 #
 
