--- a/ext/lua/CMakeLists.txt
+++ b/ext/lua/CMakeLists.txt
@@ -3,8 +3,6 @@
 #
 project(lua CXX)
 
-#add_definitions("-std=gnu99")
-
 set(LUA_SOURCES
     src/lapi.c
     src/lauxlib.c
@@ -70,7 +68,10 @@ set(LUA_HEADERS
     )
 
 # Compile as C++ for exceptions
-set_source_files_properties(${LUA_SOURCES} ${LUA_HEADERS} PROPERTIES LANGUAGE CXX)
+set_source_files_properties(${LUA_SOURCES} ${LUA_HEADERS}
+    PROPERTIES
+        LANGUAGE CXX
+    )
 
 add_library(lua STATIC ${LUA_SOURCES} ${LUA_HEADERS})
 target_include_directories(lua
